[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/autoloads/NotificationCenter.gd" type="Script" id=1]
[ext_resource path="res://RichTextTheme.tres" type="Theme" id=2]

[node name="NotificationCenter" type="Node2D"]
light_mask = 0
z_index = 10
z_as_relative = false
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
process_priority = 9
margin_right = 893.0
margin_bottom = 411.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Values" type="VBoxContainer" parent="Control"]
margin_left = 30.0
margin_top = 23.0
margin_right = 392.0
margin_bottom = 389.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="RichTextLabel" parent="Control/Values"]
margin_right = 362.0
margin_bottom = 14.0
theme = ExtResource( 2 )
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplesInSight" type="RichTextLabel" parent="Control/Values"]
margin_top = 18.0
margin_right = 362.0
margin_bottom = 32.0
theme = ExtResource( 2 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplesInReach" type="RichTextLabel" parent="Control/Values"]
margin_top = 36.0
margin_right = 362.0
margin_bottom = 50.0
theme = ExtResource( 2 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnownApples" type="RichTextLabel" parent="Control/Values"]
margin_top = 54.0
margin_right = 362.0
margin_bottom = 68.0
theme = ExtResource( 2 )
fit_content_height = true

[node name="ClosestApple" type="RichTextLabel" parent="Control/Values"]
margin_top = 72.0
margin_right = 362.0
margin_bottom = 86.0
theme = ExtResource( 2 )
fit_content_height = true

[node name="Hands" type="RichTextLabel" parent="Control/Values"]
margin_top = 90.0
margin_right = 362.0
margin_bottom = 104.0
theme = ExtResource( 2 )
fit_content_height = true

[node name="Legs" type="RichTextLabel" parent="Control/Values"]
margin_top = 108.0
margin_right = 362.0
margin_bottom = 122.0
theme = ExtResource( 2 )
fit_content_height = true

[node name="Notification" type="RichTextLabel" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 696.272
margin_right = -17.728
margin_bottom = 2.0
theme = ExtResource( 2 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
